// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renser ExpenseLIst with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item__message"
    >
      <span>
        No expense added
      </span>
    </div>
  </div>
</div>
`;

exports[`should renser ExpenseLIst with expnses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      key="1"
    >
      <ExpenseListItem
        amount={195}
        createdAt={0}
        description="Gum"
        id="1"
        note="There is gum"
      />
    </div>
    <div
      key="2"
    >
      <ExpenseListItem
        amount={1095}
        createdAt={-345600000}
        description="rent"
        id="2"
        note="There is rent"
      />
    </div>
    <div
      key="3"
    >
      <ExpenseListItem
        amount={4500}
        createdAt={345600000}
        description="CC"
        id="3"
        note="There is cc"
      />
    </div>
  </div>
</div>
`;
